--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
-        android:text="Welcome Omar"
+        android:text="Welcome manon"
         android:textColor="#BC53CD"
         android:textSize="28sp"
         app:layout_constraintLeft_toLeftOf="parent"
