--- a/app/src/main/res/layout/activity_menna2.xml
+++ b/app/src/main/res/layout/activity_menna2.xml
@@ -5,5 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MennaActivity2">
-
+    <TextView
+        android:id="@+id/welcome_msg_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:text="Welcome Menna"
+        android:textColor="#E91E63"
+        android:textSize="28sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
