--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,32 +18,43 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/go_btn"
+    <TextView
+        android:id="@+id/welcome_msg2_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Go"
-        android:textAllCaps="false"
-        android:textSize="22sp"
+        android:layout_marginTop="88dp"
+        android:text="Welcome Duddy"
+        android:textColor="#BC53CD"
+        android:textSize="28sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcome_msg_tv"
-        android:textColor="#D500FB"/>
+        app:layout_constraintTop_toBottomOf="@+id/welcome_msg_tv" />
+
+<!--    <Button-->
+<!--        android:id="@+id/go_btn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="48dp"-->
+<!--        android:text="Go"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textSize="22sp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/welcome_msg_tv"-->
+<!--        android:textColor="#D500FB"/>-->
 
 
-    <Button
-        android:id="@+id/back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Back"
-        android:textAllCaps="false"
-        android:textSize="22sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/go_btn" />
+<!--    <Button-->
+<!--        android:id="@+id/back_btn"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="48dp"-->
+<!--        android:text="Back"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:textSize="22sp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/go_btn" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
