--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,17 @@
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/welcome_msg_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:text="Welcome manon"
-        android:textColor="#BC53CD"
-        android:textSize="28sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <TextView-->
+<!--        android:id="@+id/welcome_msg_tv"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="88dp"-->
+<!--        android:text="Welcome manon"-->
+<!--        android:textColor="#BC53CD"-->
+<!--        android:textSize="28sp"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
     <TextView
         android:id="@+id/welcome_msg2_tv"
         android:layout_width="wrap_content"
@@ -28,7 +28,7 @@
         android:textSize="28sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_msg_tv" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 <!--    <Button-->
 <!--        android:id="@+id/go_btn"-->
